<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity"
        android:orientation="vertical">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_search"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_edit_text"
            android:maxLines="1"
            android:lines="1"
            android:scrollHorizontally="true"
            android:inputType="text"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_search"
            android:text="@string/buton_search_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:textColor="@color/colorTextOverbackground"
            android:stateListAnimator="@anim/button_raise"
            android:background="@drawable/ripple_touch_selector"/>

    <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/progressbar_main"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_user_message"
            android:visibility="gone"
            android:gravity="center"
            android:layout_marginTop="200dp"
            android:textStyle="bold"
            android:textSize="20dp"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_view"/>

            <ProgressBar
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/progressbar_scroll"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>